--- a/ecommerce/src/templates/home_page.html
+++ b/ecommerce/src/templates/home_page.html
@@ -1,3 +1,34 @@
+{% extends "base.html" %}
+{% load static %}
+
+{% block base_head %}
+ <link rel="stylesheet" href='{% static "css/main.css" %}'>
+{% endblock base_head %}
+
+{% block content %}
+<div class="text-center">
+  <h1>{{ title }}</h1>
+  <h1>Hello, world we're Working!</h1>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <img src="{% static 'img/beach.jpg' %}" class="img-fluid" alt="beach">
+      <p>{{ content }}</p>
+    </div>
+  </div>
+
+  {% if request.user.is_authenticated %}
+  <div class="row">
+    <div class="col">
+      <h1>Premium</h1>
+      <p>{{ premium_content }}</p>
+    </div>
+  </div>
+  {% endif %}
+</div>
+{% endblock content %}
+
 {% load static %}
 <!doctype html>
   <html lang="en">
@@ -12,31 +43,6 @@
       <link rel="stylesheet" href="{% static 'css/main.css' %}">
     </head>
     <body>
-      <div class="text-center">
-        <h1>{{ title }}</h1>
-        <h1>Hello, world we're Working!</h1>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <img src="{% static 'img/beach.jpg' %}" class="img-fluid" alt="beach">
-            <p>{{ content }}</p>
-          </div>
-        </div>
-
-        {% if request.user.is_authenticated %}
-        <div class="row">
-          <div class="col">
-            <h1>Premium</h1>
-            <p>{{ premium_content }}</p>
-          </div>
-        </div>
-        {% endif %}
-
-      </div>
-
-      <div class="row">
-      </div>
 
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
