--- a/ecommerce/src/templates/base.html
+++ b/ecommerce/src/templates/base.html
@@ -11,7 +11,9 @@
     </head>
     <body>
         {% include 'base/navbar.html' with brand_name='eCommerce'%}
-        {% block content %}{% endblock content %}
+        <div class="container">
+          {% block content %}{% endblock content %}        
+        </div>
 
 
         {% include 'base/js.html' %}
