--- a/ecommerce/src/templates/base/navbar.html
+++ b/ecommerce/src/templates/base/navbar.html
@@ -3,8 +3,12 @@
 {% url 'products:list' as product_list_url %}
 {% url 'login' as login_url %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ home_url }}">{% if brand_name %} {{brand_name}} {% else %}CFE eCommerce {% endif %}</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
+    <div class="container">
+        <a class="navbar-brand" href="{{ home_url }}">
+            <img src="http://getbootstrap.com/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+            {% if brand_name %} {{brand_name}} {% else %}CFE eCommerce {% endif %}
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,9 +49,7 @@
               <a class="nav-link disabled" href="#">Disabled</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+          {% include "search/snippets/search-form.html" %}
         </div>
+    </div>
 </nav>
