--- a/ecommerce/src/products/templates/products/detail.html
+++ b/ecommerce/src/products/templates/products/detail.html
@@ -2,13 +2,16 @@
 
 {% block content %}
         <div class="row">
-            <div class="col">
+            <div class="col-12 col-md-6">
                     <h1>{{ object.title }}</h1>
                     {{ object.timestamp|timesince }} ago<br/>
                     {{ object.description|linebreaks }}
                     {% if object.image %}
                         <img src="{{ object.image.url }} " class="img-fluid" alt="">
                     {% endif %}
+            </div>
+            <div class="col-12 col-md-6">
+                {% include 'products/snippets/update-cart.html' with product=object cart=cart%}
             </div>
         </div>
 
