--- a/ecommerce/src/templates/base/navbar.html
+++ b/ecommerce/src/templates/base/navbar.html
@@ -2,6 +2,9 @@
 {% url 'contact' as contact_url %}
 {% url 'products:list' as product_list_url %}
 {% url 'login' as login_url %}
+{% url 'register' as register_url %}
+{% url 'cart:home' as cart_url %}
+
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
     <div class="container">
@@ -19,22 +22,29 @@
               <a class="nav-link" href="{{ home_url }}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item {% if request.path == contact_url %}active{% endif %}">
-              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+              <a class="nav-link" href="{{ contact_url }}">Contact</a>
             </li>
             <li class="nav-item {% if request.path == product_list_url %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'products:list' %}">Products</a>
+                    <a class="nav-link" href="{{ product_list_url }}">Products</a>
             </li>
             {% if request.user.is_authenticated %}
             <li class="nav-item {% if request.path == login_url %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'login' %}">Logout</a>
+                    <a class="nav-link" href="{{ login_urlz}}">Logout</a>
             </li>
             {% else %}
             <li class="nav-item {% if request.path == login_url %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    <a class="nav-link" href="{{ login_url }}">Login</a>
             </li>
+            <li class="nav-item {% if request.path == register_url %}active{% endif %}">
+                <a class="nav-link" href="{{ register_url }}">Register</a>
+          </li>
             {% endif %}
+            <li class="nav-item {% if request.path == cart_url  %}active{% endif %}">
+                <a class="nav-link" href="{{ cart_url }}">{{ request.session.cart_items }} <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                </a>
+            </li>
             
-            <li class="nav-item dropdown">
+            {% comment %} <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
               </a>
@@ -48,6 +58,7 @@
             <li class="nav-item">
               <a class="nav-link disabled" href="#">Disabled</a>
             </li>
+          {% endcomment %}
           </ul>
           {% include "search/snippets/search-form.html" %}
         </div>
