--- a/ecommerce/src/carts/templates/carts/home.html
+++ b/ecommerce/src/carts/templates/carts/home.html
@@ -29,6 +29,10 @@
             <td colspan="2"></td>
             <td><b>Total</b> {{cart.total }}</td>
         </tr>
+        <tr>
+            <td colspan="2"></td>
+            <td><a class="btn btn-block btn-success" href="{% url 'cart:checkout' %}">Checkout</a> {{cart.total }}</td>
+        </tr>
     </tbody>
 </table>
 
