--- a/ecommerce/src/search/templates/search/snippets/search-form.html
+++ b/ecommerce/src/search/templates/search/snippets/search-form.html
@@ -1,4 +1,4 @@
-<form method="GET" action='{% url "search:query" %}' class="form my-2 my-lg-0">
+<form method="GET" action='{% url "search:query" %}' class="form my-2 my-lg-0 search-form">
     <div class="input-group">
         <input name="q" class="form-control" type="search" placeholder="Search" aria-label="Search" value='{{ request.GET.q }}'>
         <span class="input-group-btn">
