--- a/ecommerce/src/templates/contact/view.html
+++ b/ecommerce/src/templates/contact/view.html
@@ -3,14 +3,13 @@
 {% block content %}
 <div class="text-center">
     <h1>{{ title }}</h1>
-    <h1>Hello, world we're Working!</h1>
   </div>
   <div class="container">
     <div class="row">
       <div class="col">
-        <p>{{ content }}</p>
-        <div class="col-sm-6">
-          <form method="POST"> {% csrf_token %}
+        <div class="col-md-6 col-12 mx-auto">
+        <p>{{ content }}</p>        
+          <form class='contact-form' method="POST" action='{% url "contact" %}'> {% csrf_token %}
             {{ form }}
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
