Added Stripe to project

--- a/ecommerce/src/templates/base.html
+++ b/ecommerce/src/templates/base.html
@@ -17,6 +17,8 @@
 
 
         {% include 'base/js.html' %}
+        {% block javascript %}
         
+        {% endblock javascript %}
     </body>
   </html>
