--- a/ecommerce/src/templates/base/css.html
+++ b/ecommerce/src/templates/base/css.html
@@ -6,4 +6,5 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!--  jQuery Confirm  -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
-
+<!-- Custom Stripe Styling -->
+<link rel="stylesheet" href="{% static 'css/stripe-custom-style.css' %}">
